--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,25 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
+/* Created by: Aimar Fernandez
+* Created on: Feb 2025
 * This file contains the CSS for index.html
 */
+
+body {
+  background-color: rgb(237, 232, 232);
+  font-size: medium;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+main,
+.mdl-layout__header {
+  padding-left: 20px;
+}
+
+img {
+  float: right;
+  height: 200px;
+}
+
+.page-content {
+  font-size:large;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
